# keyring-cli

./: .gitignore  .insta.toml  CHANGELOG.md  Cargo.toml  Cross.toml  FAQ.md  GUIDE.md  LICENSE  Makefile  PHASE4_VERIFICATION_REPORT.md  PHASE5_COMPLETION_REPORT.md  README.md  SECURITY.md  clippy.toml  debug_strength  debug_strength.rs  test_correct  test_correct.rs  test_debug  test_debug.rs  test_score.rs  test_strong  test_strong.rs  test_strong2  test_strong2.rs
.cargo/: config.toml
.claude/: ralph-loop.local.md  settings.local.json
.github/: CLAUDE.md
.github/workflows/: CLAUDE.md  build.yml  build.yml.disabled  codeql.yaml  codeql.yaml.disabled  coverage.yml  security.yml  security.yml.disabled  test.yml  test.yml.disabled
benches/: crypto-bench.rs
docs/: bip39-passkey-quality-review.md  bip39-passkey-review.md  cli.md  cross-compilation.md  crypto-module.md  database-completion.md  database-layer.md  health-checks.md  hkdf-device-key-review.md  homebrew-setup.md  pure-rust-migration.md
docs/plans/: 2026-02-01-rust-only-cross-implementation.md  phase4-verification-results.md
examples/: test_hkdf_api.rs  tree_demo.rs
scripts/: build.ps1  build.sh  cross-build.sh
src/: CLAUDE.md  clipboard.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  mcp.rs  onboarding.rs  sync.rs
src/audit/: mod.rs
src/cli/: CLAUDE.md  config.rs  diagnostics.rs  mcp.rs  mod.rs  onboarding.rs
src/cli/commands/: CLAUDE.md  config.rs  delete.rs  devices.rs  generate.rs  health.rs  keybindings.rs  list.rs  mnemonic.rs  mod.rs  recover.rs  search.rs  show.rs  sync.rs  update.rs  wizard.rs
src/cli/utils/: input.rs  mod.rs  pretty_printer.rs
src/clipboard/: linux.rs  macos.rs  manager.rs  mod.rs  windows.rs
src/cloud/: config.rs  metadata.rs  mod.rs  provider.rs  storage.rs
src/config/: mod.rs  sync_config.rs
src/crypto/: CLAUDE.md  aes256gcm.rs  argon2id.rs  bip39.rs  derivation.rs  encryption.rs  hkdf.rs  key.rs  keystore.rs  keywrap.rs  mod.rs  passkey.rs  record.rs
src/db/: connection.rs  lock.rs  migration.rs  mod.rs  models.rs  schema.rs  vault.rs  wal.rs
src/db/migrations/: mod.rs  v002_add_groups.rs
src/db/vault/: crypto.rs  group.rs  lock.rs  metadata.rs  mod.rs  record.rs  search.rs  sync.rs
src/db/vault/tests/: mod.rs
src/device/: mod.rs
src/health/: checker.rs  hibp.rs  mod.rs  report.rs  strength.rs
src/mcp/: config.rs  key_cache.rs  lock.rs  main.rs  mod.rs  secure_memory.rs  server.rs
src/mcp/audit/: mod.rs
src/mcp/auth/: policy.rs  session.rs  used_tokens.rs
src/mcp/authorization/: mod.rs
src/mcp/executors/: api.rs  git.rs  mod.rs  ssh.rs  ssh_executor.rs
src/mcp/handlers/: mod.rs  ssh.rs
src/mcp/policy/: mod.rs  policy.rs  session.rs  token.rs
src/mcp/tools/: api.rs  git.rs  mod.rs  ssh.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/sync/: cloud.rs  cloud_service.rs  conflict.rs  export.rs  import.rs  mod.rs  nonce_validator.rs  service.rs  watcher.rs
src/sync/import/: importer.rs  mod.rs  service.rs  tests.rs
src/tui/: CLAUDE.md  app.rs  config.rs  error.rs  fixed_wizard_flow.rs  handler.rs  mod.rs  panic_hook.rs  testing.rs  utils.rs  wizard_flow.rs
src/tui/app/: events.rs  mod.rs  render.rs  terminal.rs  types.rs  unlock.rs  wizard.rs
src/tui/commands/: config.rs  delete.rs  health.rs  list.rs  mod.rs  new.rs  search.rs  show.rs  update.rs
src/tui/components/: confirm_dialog.rs  detail_panel.rs  filter_panel.rs  form_example.rs  group_picker.rs  mod.rs  search_bar.rs  select.rs  status_bar.rs  tag_editor.rs  text_area.rs  text_input.rs  tree.rs  tree_panel.rs
src/tui/core/: app.rs  dispatcher.rs  focus_manager.rs  mod.rs  notification.rs  password_strength.rs  screen_manager.rs  state_manager.rs  task_manager.rs  theme.rs  validation.rs
src/tui/keybindings/: CLAUDE.md  binding.rs  manager.rs  mod.rs  parser.rs
src/tui/mock/: mod.rs  vault.rs
src/tui/models/: group.rs  mod.rs  password.rs  tree.rs
src/tui/screens/: clipboard_timeout.rs  conflict.rs  edit_password_screen.rs  help.rs  main_screen.rs  master_password.rs  master_password_confirm.rs  mod.rs  new_password_screen.rs  passkey_confirm.rs  passkey_generate.rs  passkey_import.rs  passkey_verify.rs  password_policy.rs  provider_config.rs  provider_select.rs  security_notice.rs  settings.rs  sync.rs  trash.rs  trash_retention.rs  unlock.rs  welcome.rs  welcome_screen_impl.rs  wizard.rs  wizard_screen.rs
src/tui/services/: clipboard.rs  crypto.rs  database.rs  mod.rs
src/tui/state/: app_state.rs  filter_state.rs  mod.rs  selection.rs  tree_state.rs
src/tui/tags/: config.rs  dialog.rs  mod.rs  widget.rs
src/tui/tests/: app_snapshot_tests.rs  component_trait_tests.rs  error_tests.rs  event_tests.rs  integration_tests.rs  mod.rs  screen_snapshot_tests.rs  secure_tests.rs  visual_regression_tests.rs  wizard_snapshot_tests.rs
src/tui/traits/: clipboard.rs  component.rs  event.rs  focus.rs  ime.rs  layout.rs  mod.rs  notification.rs  password_strength.rs  screen.rs  secure.rs  service.rs  state.rs  task.rs  theme.rs  validation.rs  wizard_step.rs
src/tui/widgets/: input.rs  mnemonic.rs  mod.rs  password.rs
src/types/: mod.rs  sensitive.rs
tests/: CLAUDE.md  README.md  audit_test.rs  change_password_test.rs  cli_config_test.rs  cli_delete_test.rs  cli_generate_show_test.rs  cli_keybindings_test.rs  cli_mnemonic_test.rs  cli_search_test.rs  cli_smoke.rs  cli_tests.rs  cli_update_test.rs  clipboard_test.rs  cloud_metadata_test.rs  cloud_provider_test.rs  cloud_service_test.rs  cloud_storage_test.rs  crypto_integration_test.rs  crypto_keystore_test.rs  crypto_test.rs  db_test.rs  device_test.rs  devices_test.rs  diagnostics_integration_test.rs  error_test.rs  full_sync_flow_test.rs  health_integration.rs  health_tests.rs  hkdf_test.rs  keybindings_sync_test.rs  keybindings_test.rs  keyhierarchy_test.rs  keystore_test.rs  lock_test.rs  mcp_audit_integration_test.rs  mcp_auth_token_test.rs  mcp_authorization_test.rs  mcp_config_test.rs  mcp_executors_api_test.rs  (+44 more)
tests/integration/: cli_tests.rs
tests/mcp/: mod.rs
tests/mcp/auth/: mod.rs
(+153 files in other folders)
