[package]
name = "keyring-cli"
version = "0.1.0"
edition = "2021"
authors = ["OpenKeyring Team"]
license = "MIT"
repository = "https://github.com/open-keyring/keyring-cli"
description = "OpenKeyring CLI - A privacy-first password manager"
keywords = ["password", "keyring", "vault", "security"]
categories = ["command-line-utilities"]

[[bin]]
name = "ok"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
sha-1 = "0.10"
zeroize = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
rpassword = "7.3"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"

# Async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

# HTTP client for HIBP API
reqwest = { version = "0.12", features = ["json"] }

# YAML configuration
serde_yaml = "0.9"

# Platform detection
sysinfo = "0.30"
dirs = "5.0"

# System calls for file locking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Clipboard (platform-specific)
[target.'cfg(target_os = "macos")'.dependencies]
# macOS uses pbcopy/pbpaste via std::process

[target.'cfg(target_os = "linux")'.dependencies]
# Linux clipboard via xclip/wl-copy
# Will use conditional compilation

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.3"
windows = { version = "0.58", features = ["Win32_Storage_FileSystem"] }

[[bench]]
name = "crypto-bench"
harness = false

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
