[package]
name = "keyring-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["OpenKeyring Team"]
license = "MIT"
repository = "https://github.com/open-keyring/keyring-cli"
description = "OpenKeyring CLI - A privacy-first password manager"
keywords = ["password", "keyring", "vault", "security"]
categories = ["command-line-utilities"]

[[bin]]
name = "ok"
path = "src/main.rs"

[[bin]]
name = "ok-mcp-server"
path = "src/mcp/main.rs"

[features]
default = []
test-env = []  # Only for development/testing

# Test-specific feature that enables test-env
testing = ["test-env"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# Interactive input
dialoguer = "0.11"

# Fuzzy matching for autocomplete
fuzzy-matcher = "0.3"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.9"
sha2 = "0.10"
sha-1 = "0.10"
hkdf = "0.12"
pbkdf2 = "0.12"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
bip39 = { version = "2.0", features = ["rand"] }
hmac = "0.12"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
rpassword = "7.3"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"

# Async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# SSH execution
openssh = "0.11"

# Git operations
git2 = "0.19"

# File system watcher
notify = "6.0"

# Cloud storage abstraction
opendal = { version = "0.50", features = [
    "services-fs",
    "services-webdav",
    "services-sftp",
    "services-dropbox",
    "services-gdrive",
    "services-onedrive",
    "services-aliyun-drive",
    "services-oss",
    "services-cos",
    "services-obs",
    "services-upyun",
    "services-http",
] }

# HTTP client for HIBP API
# Use native-tls-vendored for static OpenSSL linking to avoid cross-compilation issues
reqwest = { version = "0.12", features = ["json", "native-tls-vendored", "stream"] }
bytes = "1.6"

# YAML configuration
serde_yaml = "0.9"

# Platform detection
sysinfo = "0.30"
dirs = "6.0"

# Cross-platform conditional compilation
cfg-if = "1.0"

# File locking
fs2 = "0.4"

# MCP server implementation
rmcp = { version = "0.5", features = ["server", "transport-io"] }

# System calls for file locking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Clipboard (platform-specific)
[target.'cfg(target_os = "macos")'.dependencies]
# macOS uses pbcopy/pbpaste via std::process

[target.'cfg(target_os = "linux")'.dependencies]
# Linux clipboard via xclip/wl-copy
# Will use conditional compilation

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.3"
windows = { version = "0.58", features = ["Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security_Cryptography"] }

[[bench]]
name = "crypto-bench"
harness = false

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
